--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
   "electron": "electron .",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "install": "^0.13.0",
+    "mongoose": "^8.9.2",
+    "npm": "^11.0.0",
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
