--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "install": "^0.13.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "npm": "^11.0.0",
     "react": "^19.0.0",
